change link to blogpost

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="leaflet-control leaflet-bar leaflet-control-custom">
-            <a class="leaflet-control-zoom-in leaflet-control-button-custom help" href="https://github.com/mess110/cryptoplace" target="_blank" title="Help" role="button" aria-label="Help">?</a>
+            <a class="leaflet-control-zoom-in leaflet-control-button-custom help" href="https://mess110.github.io/blog/cryptoplace/" target="_blank" title="Help" role="button" aria-label="Help">?</a>
         </div>
 
         <script type="text/javascript" src="vendor/leaflet.js"></script>
